# Pkg-Mgr

./: .gitignore  CONTRIB.md  INSTALL  INSTALL.md  LICENSE.md  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  configure.ac  defaultDefinitions.am  doxy-config
docs/: doxy-config-html  doxy-config-latex  doxy-config-man
docs/html/: Config_8cpp.html  Config_8h.html  Config_8h_source.html  Options_8cpp.html  Options_8h.html  Options_8h_source.html  Pkg_8cpp.html  Pkg_8h.html  Pkg_8h_source.html  Starter_8cpp.html  annotated.html  classConfig-members.html  classConfig.html  classIConfigMap-members.html  classIConfigMap.html  classOptions-members.html  classOptions.html  classPkg-members.html  classPkg.html  classes.html  deprecated.html  dir_3f615ade772d23cefe5e20dcb18424a2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b78fdfbbb632ce54d070469d6a721373.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  md_CONTRIB.html  md_INSTALL.html  md_LICENSE.html  md_NEWS.html  menudata.js  pages.html  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_4.js  pages_5.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: Config_8cpp.tex  Config_8h.tex  Options_8cpp.tex  Options_8h.tex  Pkg_8cpp.tex  Pkg_8h.tex  Starter_8cpp.tex  annotated.tex  classConfig.eps  classConfig.tex  classIConfigMap.eps  classIConfigMap.tex  classOptions.tex  classPkg.tex  deprecated.tex  files.tex  hierarchy.tex  index.tex  md_CONTRIB.tex  md_INSTALL.tex  md_LICENSE.tex  md_NEWS.tex  refman.tex  structmode__s.tex
docs/man/man3/: Config.cpp.3  Options.cpp.3  Pkg.cpp.3
src/: Makefile.am
src/backend/: Config.cpp  Options.cpp  Pkg.cpp
src/cli/: Starter.cpp
src/include/: Config.h  Options.h  Pkg.h
tests/executable-tests/: Makefile.am  pkg-mgr.conf  tstFollow.py  tstInstall.py  tstUnfollow.py  tstUninstall.py
tests/executable-tests/test-pkgs/: generateScripts.sh  test2.tar
tests/unit-tests/: Makefile.am  binary-wrapper.sh
tests/unit-tests/testConfig/: tst-config.conf  tstConfig.cpp  tstConfig.h
tests/unit-tests/testOptions/: tstOptions.cpp  tstOptions.h
tests/unit-tests/testPkg/: tstPkg.cpp  tstPkg.h
tests/unit-tests/testPkg/testPkgs/: test2.tar
tests/util/: FileHasherUtil.cpp  FileHasherUtil.h  RecursiveFileHasherTool.cpp  RecursiveFileHasherTool.h  recursive-file-hasher  recursiveFileHasherBuildCmd
tests/version-tests/: Makefile.am  doxygen-version-test.sh
