# This is a set of tests to verify that the version numbers are aligned between documentation, NEWS.md, and configure.ac
# NEWS.md is the authoritative source
# Nothing is changed by these scripts, in case it is NEWS.md that is out-dated
# Mostly because there were a couple times I forgot to update some sources...

TESTS = configure-version-test.sh doxygen-version-test.sh

TEST_EXTENSIONS = .sh
SH_LOG_COMPILER = $(BASH)
AM_SH_LOG_COMPILER_FLAGS = 
